# SpeakerLearn

./: .cursorignore  .gitattributes  .gitignore  CMakeLists.txt  Iknowmyspeaker.html  README copy.md  README.md  Untitled  addSpeakerPage.html  add_image.py  fix_extra_quote.py  fix_img.py  homePage.html  index.html  package.json  playMusic.html  preferencesPage.html  retroSpeaker.avif  run.bat  run.js  run.sh  run_local.py  speakerlearn_framework_plan.md
backend/: CMakeLists.txt  README.md  SpeakerLearnSpecific  build_error.txt
backend/Mac OS/: README.md  build-macos.sh
backend/docs/: API.md  ARCHITECTURE.md
backend/dsp_engine/: CMakeLists.txt  engine.cpp
backend/src/api/: HttpServer.cpp  HttpServer.h
backend/src/core/: AudioPipeline.cpp  AudioPipeline.h
backend/src/core/stages/: Stages.cpp  Stages.h
backend/src/db/: DatabaseManager.cpp  DatabaseManager.h  Models.h
bridge/: audioBridge.js  biquadEq.js
dist-electron/: SpeakEasy Setup 0.1.0.exe.blockmap  builder-debug.yml  builder-effective-config.yaml  latest.yml
dist-electron/win-unpacked/resources/: app-update.yml  app.asar
docs/: BRIDGE.md  FRONTEND.md  INSTALL.md  OVERVIEW.md  PACKAGING.md
electron/: main.js
frontend/: playMusic.html
frontend/js/: bands.js  eqExport.js
js/: api.js  bands.js
patches/segfault-handler-stub/: index.js  package.json
scripts/: package-release.ps1  package-release.sh  prepare-electron-build.js
server/: run.js
server/bridge/: audioBridge.js  biquadEq.js
src/: main.cpp
src/core/: AudioPipeline.cpp
src/core/stages/: Stages.h
